fix: add backwards compatibility for >= Java 8